# tmdbwrapper

./: pyproject.toml
tests/: test_genre.py  test_tmdbwrapper.py  test_tv.py
tests/vcr_cassettes/: genre-list-with-param.yml  genre-movie.yml  genre-tv.yml  tv-info.yml  tv-popular-param.yml  tv-popular.yml  tv-top-rated-param.yml  tv-top-rated.yml
tmdbwrapper/: __init__.py  genre.py  tv.py
